Projects Description Added

--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,10 @@
                 <li><span class="bold bg-blue">Name:</span><br> Calculator Online</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    This is a web app.
+                    - This is a Web Application developed using ASP.NET Core 6 .NET Web Framework with C# Programming Language. <br>
+                    - The idea behind the web app is to create a one Application for all kind of Calculator existed in this world. <br>
+                    - So far, it is not yet completed. The logo needs to be designed well. All it is right now is
+                    a very basic calculator with only 5 buttons. 4 buttons for 4 common arithmetic operators and an equal operator.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a href="#"></a></li>
@@ -102,7 +105,17 @@
                 <li><span class="bold bg-blue">Name:</span><br> Guess The Hidden Character Game</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    This is a C# Console App.
+                    - This is a Console App developed using C# Programming Language. <br>
+                    - When the user first fires up the app, it will show the title/logo of the app and 
+                    prompt the user to enter his name. After it has the user's name, it will welcome the user.
+                    Then, it will show the app menu which is 3: Start, Instructions and Quit, while prompting the user
+                    to choose from those as number from 1 to 3. When the user chooses number 1, it will start the game. First, it will show to the user 3
+                    characters with each name and attributes. Then, the screen will change and will show only 1 character
+                    with full-packed attributes and name existed as blank, while prompting the user to guess the name of the character based on the attributes.
+                    When the user guesses wrong, his 3 game life will reduce, otherwise his score/points will increase by one. And the user
+                    can play the game so long as he wants. <br>
+                    Back to menu, when the user chooses number 2, it will show to the user the instructions for playing the app.
+                    And if the user chooses number 3, the app will thank the user and exit gracefully.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a href="#"></a></li>
@@ -126,10 +139,21 @@
         <br>
         <div class="info-wrapper">
             <ul class="text-white info-list">
-                <li><span class="bold bg-blue">Name:</span><br> Student Record Management</li>
+                <li><span class="bold bg-blue">Name:</span><br> Student Record Management (CLI-based System)</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    This is a C# Console App.
+                    - This is a Console App or CLI-based System (Command-line Interface -based System) developed using C# Programming Language. <br>
+                    - The app starts directly with its logo name and menu stacked together, while the system prompting the user to choose from menu.
+                    If the user wants to add a student record to the system, he needs to choose number 1. Else if the user wants to view all the records
+                    recorded in the system, he needs to choose number 2. Else if the user only wants to know if a certain record is recorded in the
+                    system, he needs to choose number 3. And the last number is for exit/stop of the system. <br>
+                    In the Add Section, the user first needs to choose the specific Student Course he wants to record or return back to menu.
+                    Then the user can enter the student record information. After clicking enter, the record is being recorded. The user can
+                    record student record again. <br>
+                    In the View Section, the user can view all the records recorded in the specific student course which was
+                    should be specified by the user upon entering the section. Then, the user can return back to menu. <br>
+                    In the Search Section, the user can enter the name of a student he wants to ensure if it is recorded in the system.
+                    If the student's name existed, the system will echo "Record Found!!!!", otherwise "Record Not Found!!!!"
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a href="#"></a></li>
@@ -155,7 +179,14 @@
                 <li><span class="bold bg-blue">Name:</span><br> NumSys-C</li>
                 <li class="text-justify">
                     <span class="bold bg-blue">Description:</span><br>
-                    This is a C# Mobile App.
+                    - This is an Android-based Mobile App developed using C# and `Xamarin Forms` Framework of .NET for building Cross-platform Mobile Application.
+                    It is now then updated to .NET MAUI (Multi-platform Application User Interface) Framework. <br>
+                    - The app has a logo (You can see that at the first list on the following App Pictures) but it has not Splash Screen, because this app
+                    was created when its developer isn't that great in App Development, he is just been forced to develop for School Thesis Purposes.
+                    The app has the following features: Dark Mode; Offline, No Ads and Free; Easy to Understand and Use;
+                    Educational Section like Read Sections and Quiz Sections; Game; and Converter Support for
+                    different Number Systems and Text as well. There is an About Section at the end of the menu, entering it will show the user
+                    the App's Purposes, who are the developers, the institutions where it is developed, and some of the App Features.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> Not Available</li>
