Projects in About Me Section Fixed

--- a/about-me.html
+++ b/about-me.html
@@ -164,7 +164,7 @@
                     <div class="card-title">Erwin Hadjirul Portfolio Website</div>
                     <div class="card-snippet">
                         <p><span class="bold">Short Description:</span>
-                            This is a website developed with full static files including HTML Files, CSS Files, Images (JPG, PNG) and Icons (SVG).
+                            The Logo of the website emphasizes RGB (Red, Green, Blue) and the name of the owner...
                         </p>
                     </div>
                     <div class="card-readmore">2022</div>
@@ -175,7 +175,9 @@
                 <div class="card-content">
                     <div class="card-title">Calculator Online</div>
                     <div class="card-snippet">
-                        <p><span class="bold">Short Description:</span> A Calculator Project.</p>
+                        <p><span class="bold">Short Description:</span> 
+                            The idea behind the web app is to create a one Application for all kind of Calculator existed...
+                        </p>
                     </div>
                     <div class="card-readmore">2022</div>
                 </div>
@@ -185,7 +187,9 @@
                 <div class="card-content">
                     <div class="card-title">Guess The Hidden Character Game</div>
                     <div class="card-snippet">
-                        <p><span class="bold">Short Description:</span> A Game Console Project.</p>
+                        <p><span class="bold">Short Description:</span> 
+                            When the user first fires up the app, it will show the title/logo of the app and prompt the user...
+                        </p>
                     </div>
                     <div class="card-readmore">2022</div>
                 </div>
@@ -195,7 +199,9 @@
                 <div class="card-content">
                     <div class="card-title">Student Record Management</div>
                     <div class="card-snippet">
-                        <p><span class="bold">Short Description:</span> A CLI Project.</p>
+                        <p><span class="bold">Short Description:</span> 
+                            The app starts directly with its logo name and menu stacked together, while the system prompting...
+                        </p>
                     </div>
                     <div class="card-readmore">2022</div>
                 </div>
@@ -205,7 +211,9 @@
                 <div class="card-content">
                     <div class="card-title">NumSys-C</div>
                     <div class="card-snippet">
-                        <p><span class="bold">Short Description:</span> A Mobile App Project.</p>
+                        <p><span class="bold">Short Description:</span> 
+                            The app has the following features: Dark Mode; Offline, No Ads and Free; Easy to Understand and Use...
+                        </p>
                     </div>
                     <div class="card-readmore">2022</div>
                 </div>
