--- a/EducationPages/elem.html
+++ b/EducationPages/elem.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="raw-data/icons/apple-touch-icon.png">
+    <link rel="icon" href="../raw-data/icons/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="../raw-data/icons/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="manifest" href="../raw-data/icons/site.webmanifest">
+    <link rel="shortcut icon" href="../raw-data/icons/favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/footer.css">
