Project Section Finished

--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
         </div>
         <br>
         <div class="box-wrapper-grid snaps-inline">
-            <div class="box-item-grid"><a href="" target="_blank"><img src="" alt="App Icon"></a></div>
+            <div class="box-item-grid"><a href="raw-data/icons/android-chrome-512x512.png" target="_blank"><img src="raw-data/icons/android-chrome-512x512.png" alt="App Icon"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/my-portfolio/index.png" target="_blank"><img src="raw-data/img/my-proj/my-portfolio/index.png" alt="Screenshots"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/my-portfolio/services.png" target="_blank"><img src="raw-data/img/my-proj/my-portfolio/services.png" alt="Screenshots"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/my-portfolio/about-me.png" target="_blank"><img src="raw-data/img/my-proj/my-portfolio/about-me.png" alt="Screenshots"></a></div>
@@ -99,7 +99,7 @@
         </div>
         <br>
         <div class="box-wrapper-grid snaps-inline">
-            <div class="box-item-grid"><a href="" target="_blank"><img src="" alt="App Icon"></a></div>
+            <div class="box-item-grid"><a href="raw-data/icons/android-chrome-512x512-calculator.png" target="_blank"><img src="raw-data/icons/android-chrome-512x512-calculator.png" alt="App Icon"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/simple-asp-net/default-0.png" target="_blank"><img src="raw-data/img/my-proj/simple-asp-net/default-0.png" alt="Screenshots"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/simple-asp-net/about.png" target="_blank"><img src="raw-data/img/my-proj/simple-asp-net/about.png" alt="Screenshots"></a></div>
         </div>
@@ -130,7 +130,7 @@
         </div>
         <br>
         <div class="box-wrapper-grid snaps-inline">
-            <div class="box-item-grid"><a href="" target="_blank"><img src="" alt="App Icon"></a></div>
+            <div class="box-item-grid"><a href="raw-data/icons/android-chrome-512x512-guess.png" target="_blank"><img src="raw-data/icons/android-chrome-512x512-guess.png" alt="App Icon"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/my-cli-game/1.png" target="_blank"><img src="raw-data/img/my-proj/my-cli-game/1.png" alt="Screenshots"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/my-cli-game/2.png" target="_blank"><img src="raw-data/img/my-proj/my-cli-game/2.png" alt="Screenshots"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/my-cli-game/3.png" target="_blank"><img src="raw-data/img/my-proj/my-cli-game/3.png" alt="Screenshots"></a></div>
@@ -168,7 +168,7 @@
         </div>
         <br>
         <div class="box-wrapper-grid snaps-inline">
-            <div class="box-item-grid"><a href="" target="_blank"><img src="" alt="App Icon"></a></div>
+            <div class="box-item-grid"><a href="raw-data/icons/android-chrome-512x512-student.png" target="_blank"><img src="raw-data/icons/android-chrome-512x512-student.png" alt="App Icon"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/1.png" target="_blank"><img src="raw-data/img/my-proj/student-management-cli/1.png" alt="Screenshots"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/2.png" target="_blank"><img src="raw-data/img/my-proj/student-management-cli/2.png" alt="Screenshots"></a></div>
             <div class="box-item-grid"><a href="raw-data/img/my-proj/student-management-cli/3.png" target="_blank"><img src="raw-data/img/my-proj/student-management-cli/3.png" alt="Screenshots"></a></div>
