about-me, services and README.md files edited according to what it should be

--- a/services.html
+++ b/services.html
@@ -91,7 +91,8 @@
                 <div class="text-justice">
                     <p>Sample Project:</p>
                     <br>
-                    - <a class="improved-link" href="#">API</a>
+                    <p class="text-red">No Available</p>
+                    <!-- - <a class="improved-link" href="#"></a> -->
                 </div>
                 <br>
                 <h2 class="text-white left ml-20 bold">Additional Information:</h2>
@@ -134,7 +135,8 @@
                 <div class="text-justice">
                     <p>Sample Project:</p>
                     <br>
-                    - <a class="improved-link" href="#">GUI</a>
+                    <p class="text-red">No Available</p>
+                    <!-- - <a class="improved-link" href="#"></a> -->
                 </div>
                 <br>
                 <h3 class="text-white left ml-25 bold">Console Application Development</h3>
