About Me Page: Awards and Certifications Added: DICT Web Development Training Certificate of Participation Added

--- a/about-me.html
+++ b/about-me.html
@@ -227,9 +227,22 @@
             </a>
         </section>
 
-        <!-- Awards and Certifications
+        <!-- Awards and Certifications -->
         <h2 class="text-white">Awards and Certifications</h2>
-        <section></section> -->
+        <section>
+            <a class="card" href="raw-data/img/new-journey/dict-php-training.jpg" target="_blank">
+                <div class="card-image" style="background-image: url(raw-data/img/new-journey/dict-php-training.jpg);"></div>
+                <div class="card-content">
+                    <div class="card-title">DICT Web Development Training Certificate of Participation</div>
+                    <div class="card-snippet">
+                        <p><span class="bold">Short Description:</span> 
+                            It is a 2-day or approximately 16-hour awesome PHP Programming Language Training.
+                        </p>
+                    </div>
+                    <div class="card-readmore">Dec. 18, 2022</div>
+                </div>
+            </a>
+        </section>
 
         <!-- Languages -->
         <section class="bg-like-footer bg-blue">
