Social Medias Modified

--- a/about-me.html
+++ b/about-me.html
@@ -107,7 +107,7 @@
 
         <!-- Experience Section
         <h2 class="text-white">Experiences</h2>
-        <section></section> -->
+        <section class="cards"></section> -->
 
         <!-- Education Section -->
         <h2 class="text-white">Educational Background</h2>
@@ -229,7 +229,7 @@
 
         <!-- Awards and Certifications -->
         <h2 class="text-white">Awards and Certifications</h2>
-        <section>
+        <section class="cards">
             <a class="card" href="raw-data/img/new-journey/dict-php-training.jpg" target="_blank">
                 <div class="card-image" style="background-image: url(raw-data/img/new-journey/dict-php-training.jpg);"></div>
                 <div class="card-content">
@@ -269,14 +269,8 @@
             <div class="col">
                 <h3>Social Medias <div class="underline"><span></span></div></h3>
                 <div class="social-icons">
-                    <a target="_blank" href="https://web.facebook.com/people/Erwin-Hadjirul/100071975233115">
-                        <img height="20px" src="raw-data/svg/Facebook.svg">
-                    </a>
                     <a target="_blank" href="https://github.com/Erwin-Hadjirul">
                         <img height="20px" src="raw-data/svg/Github - Colorful.svg">
-                    </a>
-                    <a target="_blank" href="https://stackoverflow.com/users/20193593/Erwin-Hadjirul">
-                        <img height="20px" src="raw-data/svg/StackOverflow.svg">
                     </a>
                     <a target="_blank" href="https://www.linkedin.com/in/Erwin-Hadjirul/89397b249">
                         <img height="20px" src="raw-data/svg/LinkedIn - Blue.svg">
