--- a/about-me.html
+++ b/about-me.html
@@ -227,8 +227,8 @@
             </a>
         </section>
 
-        <!-- Awards and Certifications -->
-        <h2 class="text-white">Awards and Certifications</h2>
+        <!-- Licences and Certifications -->
+        <h2 class="text-white">Licences and Certifications</h2>
         <section class="cards">
             <a class="card" href="raw-data/img/new-journey/dict-php-training.jpg" target="_blank">
                 <div class="card-image" style="background-image: url(raw-data/img/new-journey/dict-php-training.jpg);"></div>
@@ -243,6 +243,10 @@
                 </div>
             </a>
         </section>
+
+        <!-- Honors and Awards
+        <h2 class="text-white">Honors and Awards</h2>
+        <section class="cards"></section> -->
 
         <!-- Languages -->
         <section class="bg-like-footer bg-blue">
