Url to the project repo added

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                     different composition of some part of the website but same styles.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
-                <li><span class="bold bg-blue">Repository:</span><br> <a href="#"></a></li>
+                <li><span class="bold bg-blue">Repository:</span><br> <a href="#">https://github.com/Erwin-Hadjirul/Portfolio</a></li>
             </ul>
         </div>
         <br>
@@ -94,7 +94,7 @@
                     a very basic calculator with only 5 buttons. 4 buttons for 4 common arithmetic operators and an equal operator.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
-                <li><span class="bold bg-blue">Repository:</span><br> <a href="#"></a></li>
+                <li><span class="bold bg-blue">Repository:</span><br> <a href="#">https://github.com/Erwin-Hadjirul/Online-Calculator</a></li>
             </ul>
         </div>
         <br>
@@ -125,7 +125,7 @@
                     And if the user chooses number 3, the app will thank the user and exit gracefully.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
-                <li><span class="bold bg-blue">Repository:</span><br> <a href="#"></a></li>
+                <li><span class="bold bg-blue">Repository:</span><br> <a href="#">https://github.com/Erwin-Hadjirul/Guess-TheHiddenCharacter-Game</a></li>
             </ul>
         </div>
         <br>
@@ -163,7 +163,7 @@
                     If the student's name existed, the system will echo "Record Found!!!!", otherwise "Record Not Found!!!!"
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
-                <li><span class="bold bg-blue">Repository:</span><br> <a href="#"></a></li>
+                <li><span class="bold bg-blue">Repository:</span><br> <a href="#">https://github.com/Erwin-Hadjirul/StudentRecord-Management-Cli-basedSystem</a></li>
             </ul>
         </div>
         <br>
